# N-Body-Odyssey

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.sh  config.json  format.sh  input.csv  test1.csv  test2.csv
.github/workflows/: build.yml  format.yml
benchmark/src/: genJson.cc  plotData.py  suiteTest.cc
include/: simulation.h
include/data_structures/: body.h  nbody.h  omp_ap.h  omp_bh.h  particle.h  sequential_ap.h  sequential_ap_avx.h  sequential_bh.h  sequential_bh_avx.h
include/nlohmann/: json.hpp
include/simulations/: mpi_ap.h  mpi_omp_avx_ap.h  omp_ap.h  omp_bh.h  sequential_ap.h  sequential_ap_avx.h  sequential_bh.h  sequential_bh_avx.h
include/utilities/: avx.h  data_format.h  fileIO.h  hip_utils.h  integrators.h  nbody_helpers.h  octree.h  quadtree.h  time_utils.h  vec3.h  vector3D.cc  vector3D.h
slurm/: submit_cuda.sh  submit_multinode.sh  submit_omp.sh  submit_sequential.sh
src/: main.cc
src/data_structures/: nbody.cc  omp_ap.cc  omp_ap.cpp  omp_bh.cc  omp_bh.cpp  sequential_ap.cc  sequential_ap_avx.cc  sequential_bh.cc  sequential_bh.cpp
src/simulations/: aos.rs  ap.hip  ap_soa.cu  ap_soa.hip  ap_soa_double.cu  ap_soa_float.cu  main.rs  mpi_ap.cc  mpi_ap.cpp  mpi_omp_avx_ap.cc  omp_ap.cc  sequential_ap.cc  sequential_ap_avx.cc  sequential_bh.cc  sequential_bh_avx.cpp
src/utilities/: fileIO.cc  fileIO.cpp  octree.cc  octree.cpp
submits/: submit_mpi.sh
tests/: positions
tests/data_structures/: nbody_test.cpp
